tests/snapshots/regression/recovery__type_annotation_recovery.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/recovery/type_annotation_recovery.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 3 errors • tests/fixtures/recovery/type_annotation_recovery.flx
error[E034]: Unexpected Token

I was expecting a type here, but I found `=`.

  tests/fixtures/recovery/type_annotation_recovery.flx:1:8
  |
1 | let x: = 1
  |        ^


error[E034]: Unexpected Token

I was expecting a type here, but I found `{`.

  tests/fixtures/recovery/type_annotation_recovery.flx:9:11
  |
9 | fn g() -> {
  |           ^

Note:
  while parsing function `g`


error[E034]: Unexpected Token

I was expecting a type here, but I found `->`.

  tests/fixtures/recovery/type_annotation_recovery.flx:14:15
   |
14 | let lam = /x: -> x
   |               ^^

Note:
  while parsing lambda expression
  Suppressed 1 cascading parser diagnostic(s) likely caused by an earlier syntax error.

Found 3 errors.
